[project]
name = "ibi-bot"
version = "0.0.0"
dependencies = [
    "discord.py",
    "dotenv",
    "psycopg[pool]",
    "mailersend",
    "pyjwt",
    "fastapi",
    "uvicorn",
]
requires-python = ">=3.12"
authors = [

]
maintainers = [
    { name = "Rin", email = "31785428+rin-senpai@users.noreply.github.com" },
    { name = "Ethan Lam", email = "z5594011@ad.unsw.edu.au" }
]
description = "the ibi discord bot"
readme = "README.md"
